--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+ 
 }
 
 #navpart1 {
@@ -55,7 +56,10 @@ body a {
   font-size: 14px;
   text-transform: uppercase;
 }
-
+#links a:hover {
+  color: #737272;
+  border-bottom: 1px solid #737272;
+}
 #icons {
   display: flex;
   gap: 80px;
@@ -64,6 +68,142 @@ body a {
   border-radius: 50px;
   background-color: #f7f7f7;
   padding: 10px;
+}
+#icons #menuIcon{
+  height: 20px ;
+  width: 20px;
+  position: relative;
+  overflow: hidden;
+}
+#icons #cart .ri-shopping-cart-line:hover{
+  scale: 1;
+  rotate: 30deg;
+}
+#icons #menuIcon .ri-menu-line{
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+#icons #menuIcon .ri-menu-line{
+  display: "initial";
+}
+#icons #menuIcon .ri-close-line{
+  display: none;
+  font-size: 18px;
+}
+
+#icons #cart{
+  height: 20px ;
+  width: 20px;
+  position: relative;
+  overflow: hidden;
+}
+#icons #cart .ri-shopping-cart-line{
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+#icons #cart .ri-shopping-cart-line{
+  display: "initial";
+}
+#icons #cart .ri-close-line{
+  display: none;
+  font-size: 18px;
+}
+#navMenu {
+  width: 100%;
+  height: 0vh;
+  background-color: #000;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  top: -120%;
+  left: 0%;
+  z-index: 9;
+  overflow: hidden;
+}
+#navMenu #right{
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: end;
+  padding-bottom: 2rem;
+  padding-right: 2rem;
+}
+#navMenu #right .link{
+  width: fit-content;
+  height: fit-content;
+  overflow: hidden;
+  /* padding: 4px; */
+}
+#navMenu #right a{
+ text-decoration: none;
+ color: #fff;
+ font-size: 3rem;
+ font-family: helvetica;
+ font-weight: 800;
+ line-height: 4rem;
+ text-transform: uppercase;
+ display: inline-block;
+}
+#navMenu #left{
+  width: 60%;
+  height: 100%;
+  display: flex;
+  align-items: end;
+}
+#navMenu #left div{
+  width: 100%;
+  height: 30vh;
+  background-color: #000;
+  display: flex;
+}
+#navMenu #left div #contectWithUs{
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  font-family: helvetica;
+  color: #fff;
+  font-size: 0.8rem;
+}
+#navMenu #left div #contectWithUs h5{
+  margin-bottom: 2rem;
+  color: #737272;
+}
+#navMenu #left div #nitty{
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  font-family: helvetica;
+  color: #fff;
+  font-size: 0.8rem;
+}
+#navMenu #left div #nitty h5{
+  margin-bottom: 2rem;
+  color: #737272;
+}
+#navMenu #left div #getStarted{
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  font-family: helvetica;
+  color: #fff;
+  font-size: 0.8rem;
+}
+#navMenu #left div #getStarted h5{
+  margin-bottom: 2rem;
+  color: #737272;
 }
 #courser {
   width: 150px;
@@ -130,7 +270,6 @@ body a {
 #page2 {
   min-height: 100vh;
   width: 100%;
-
   position: relative;
   display: flex;
   align-items: center;
@@ -154,6 +293,22 @@ body a {
   background-color: bisque;
   border-radius: 50px;
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-family: helvetica;
+  font-weight: 500;
+  font-size:0.9rem;
+  text-transform: uppercase;
+}
+#page2 .elem .dets h4:first-of-type{
+  font-weight: 300;
+}
+#page2 .elem .dets .dot{
+  width: 7px;
+  height: 7px;
+  background-color: #000;
+  border-radius: 50%;
 }
 #page2 .elem img {
   height: 100%;
@@ -394,6 +549,71 @@ body a {
     align-items: center;
   }
 
+  #navMenu {
+    flex-direction: column-reverse;
+  }
+  #navMenu #right{
+    order: 1;
+    width: 100%;
+  
+  }
+  #navMenu #right a{
+    font-size: 3rem;
+    line-height: 2.8rem;
+  }
+  #navMenu #left{
+    order: 0;
+    width: 100%;
+    height: fit-content;
+  }
+  #navMenu #left div{
+    width: 100%;
+  }
+  #navMenu #left div #contectWithUs{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-top: 2rem;
+    font-family: helvetica;
+    color: #fff;
+    font-size: 0.8rem;
+  }
+  #navMenu #left div #contectWithUs h5{
+    margin-bottom: 2rem;
+    color: #737272;
+  }
+  #navMenu #left div #nitty{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-top: 2rem;
+    font-family: helvetica;
+    color: #fff;
+    font-size: 0.8rem;
+  }
+  #navMenu #left div #nitty h5{
+    margin-bottom: 2rem;
+    color: #737272;
+  }
+  #navMenu #left div #getStarted{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-top: 2rem;
+    font-family: helvetica;
+    color: #fff;
+    font-size: 0.8rem;
+  }
+  #navMenu #left div #getStarted h5{
+    margin-bottom: 2rem;
+    color: #737272;
+  }
   #navpart1 {
     height: 82px;
     overflow: hidden;
