--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body a {
 #links a {
   text-decoration: none;
   color: #333;
+  mix-blend-mode: difference;
   font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
@@ -80,6 +81,7 @@ body a {
   rotate: -10deg;
 }
 #icons #menuIcon .ri-menu-line{
+  cursor: pointer;
   position: absolute;
   top: 0%;
   left: 0%;
@@ -90,6 +92,7 @@ body a {
 #icons #menuIcon .ri-close-line{
   display: none;
   font-size: 18px;
+  cursor: pointer;
 }
 
 #icons #cart{
@@ -102,6 +105,7 @@ body a {
   position: absolute;
   top: 0%;
   left: 0%;
+  cursor: pointer;
 }
 #icons #cart .ri-shopping-cart-line{
   display: "initial";
@@ -109,6 +113,7 @@ body a {
 #icons #cart .ri-close-line{
   display: none;
   font-size: 18px;
+  cursor: pointer;
 }
 #cartMenu {
   width: 100%;
@@ -377,18 +382,34 @@ color: #fff;
 }
 
 #page2 .elem .dets {
-  height: 60px;
+  /* height: 60px; */
   width: 60%;
   background-color: bisque;
   border-radius: 50px;
   position: absolute;
+  top: 50%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  flex-direction: column;
   font-family: helvetica;
   font-weight: 500;
   font-size:0.9rem;
   text-transform: uppercase;
+  cursor: pointer;
+}
+#page2 .elem .dets .upperDiv{
+  border-radius: 50px;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+}
+#page2 .elem .dets .lowerDiv{
+  width: 100%;
+  /* height: 300px; */
+  background-color: red;
+  border-radius: 50px;
 }
 #page2 .elem .dets h4:first-of-type{
   font-weight: 300;
