--- a/style.css
+++ b/style.css
@@ -991,3 +991,16 @@ color: #fff;
     
   }
 }
+@media (max-width: 480px) {
+  #nav {
+    padding: 10px;
+    justify-content: space-between;
+  }
+  #page1 h1 {
+    font-size: 10vw;
+    line-height: 12vw;
+  }
+  #page2 .elem {
+    margin-bottom: 10px;
+  }
+}
