--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 body {
-  overflow: hidden;
   background-color: #f7f7f7;
 }
 body a {
